Authenetication and mock tests